tests/errors/other/test_tc_other_08_import_module_not_found.pc
#import std.io
int main() {
    io.print("test");
}
